--- a/09.html
+++ b/09.html
@@ -17,7 +17,7 @@
             $('div').css({
                 height : 2,
                 backgroundColor: function(index){
-                    return "rgb(" + i + ", " + i + ", 255 )";
+                    return "rgb(" + index + ", " + index + ", 255 )";
                 }
             })
         })
