--- a/13.html
+++ b/13.html
@@ -10,6 +10,10 @@
             $('h1').click(function(){
                 alert("클릭!")
             })
+            $('h1').css({
+                color : "red",
+                backgroundColor: "blue"
+            })
         });
     </script>
 </head>
